Bug 1370594: Decrease contrast of text color

--- a/kuma/static/styles/includes/_vars.scss
+++ b/kuma/static/styles/includes/_vars.scss
@@ -83,7 +83,7 @@ $positive : $green;
 $neutral : $blue;
 $default : $grey;
 
-$text-color : #222;
+$text-color : #333;
 $heading-color : $text-color;
 $link-color : darken($blue, 5);
 $menu-link-color : $text-color;
